# go123

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRACTS.md  MONOREPO_MULTI_APP_GUIDE.md  Makefile  README.md  docker-compose.yml  warung-ai.pen
.claude/plans/: developer-quick-start.md  revenue-analytics-design.md  revenue-analytics-implementation.md
.claude/specs/: CONTRACTS.md  MONOREPO_MULTI_APP_GUIDE.md  warung-ai-product-architecture-spec.md
.github/workflows/: ci.yml
ai/: .dockerignore  .env.example  AGENTS.md  CLAUDE.md  Dockerfile  pyproject.toml
ai/scripts/: bedrock_api_key_test.py  bedrock_smoke.py  chatbedrockconverse_test.py  langgraph_postgres_chat.py  list_bedrock_models_api_key.py
ai/src/: main.py
ai/src/app/: deps.py  session_store.py
ai/src/app/agents/: analytics_agent.py  analytics_catalog.py  analytics_state.py  prompts.py  response_agent.py
ai/src/app/db/: readonly_pg.py
ai/src/app/routers/: anomaly.py  ask.py  chat_sessions.py  parse_menu.py  suggest_questions.py  text_to_sql.py  upload.py
ai/src/app/tools/: order_analytics.py
ai/src/app/utils/: aws_sigv4.py  bedrock_client.py  file_sniff.py  s3_client.py  url_fetch.py
ai/src/models/: anomaly.py  chat.py  menu.py  sql.py  upload.py
ai/src/prompts/: analytics-answer.txt  analytics-router.txt  menu-extract.txt
api/: .dockerignore  .env.example  AGENTS.md  CLAUDE.md  Dockerfile  package.json
api/migrations/: 001_reference_tables.sql  002_merchants.sql  003_menu_items.sql  004_orders.sql  (+10 more)
web/: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  package.json
(+51 files in other folders)
